--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,10 @@
       "App\\Project\\Controllers\\": "app/project/controllers/",
       "App\\Project\\Models\\": "app/project/models/",
       "App\\Project\\Utils\\": "app/project/utils/",
-      "App\\Core\\Db\\": "app/core/db/"
+      "App\\Core\\Db\\": "app/core/db/",
+      "App\\Project\\Models\\DAO\\": "app/project/models/dao/",
+      "App\\Project\\Models\\Forms\\": "app/project/models/forms/",
+      "App\\Project\\Models\\Services\\": "app/project/models/services/"
     }
   },
   "require": {
